@@ -1,0 +1,2 @@
+>bin
+c:::755::qmail-notify
