@@ -1,8 +1,0 @@
-#include "conf_bin.c"
-#include <installer.h>
-
-void insthier(void)
-{
-  int bin = opendir(conf_bin);
-  c(bin, "qmail-notify", -1, -1, 0755);
-}
